work on horizontal self-org

--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 % Plotting neural networks
 %\usepackage{import}
 \subimport{layers/}{init}
-\usetikzlibrary{positioning}
+\usetikzlibrary{fit,calc,positioning}
 \usetikzlibrary{3d} %for including external image 
 
 \def\ConvColor{rgb:yellow,5;red,2.5;white,5}
