--- a/main.bib
+++ b/main.bib
@@ -1620,3 +1620,27 @@ url={https://openreview.net/forum?id=HJGven05Y7},
  @inbook{Klapper_Rybicka_Schraudolph_Schmidhuber_2001, address={Berlin, Heidelberg}, series={Lecture Notes in Computer Science}, title={Unsupervised Learning in LSTM Recurrent Neural Networks}, volume={2130}, ISBN={978-3-540-42486-4}, url={http://link.springer.com/10.1007/3-540-44668-0_95}, DOI={10.1007/3-540-44668-0_95}, booktitle={Artificial Neural Networks — ICANN 2001}, publisher={Springer Berlin Heidelberg}, author={Klapper-Rybicka, Magdalena and Schraudolph, Nicol N. and Schmidhuber, Jürgen}, editor={Dorffner, Georg and Bischof, Horst and Hornik, Kurt}, year={2001}, pages={684–691}, collection={Lecture Notes in Computer Science} }
 
  @inproceedings{Balntas_Riba_Ponsa_Mikolajczyk_2016, address={York, UK}, title={Learning local feature descriptors with triplets and shallow convolutional neural networks}, ISBN={978-1-901725-59-9}, url={http://www.bmva.org/bmvc/2016/papers/paper119/index.html}, DOI={10.5244/C.30.119}, booktitle={Procedings of the British Machine Vision Conference 2016}, publisher={British Machine Vision Association}, author={Balntas, Vassileios and Riba, Edgar and Ponsa, Daniel and Mikolajczyk, Krystian}, year={2016}, pages={119.1-119.11}, language={en} }
+
+
+@inproceedings{bowman2016generating,
+  title={Generating sentences from a continuous space},
+  author={Bowman, Samuel R and Vilnis, Luke and Vinyals, Oriol and Dai, Andrew M and Jozefowicz, Rafal and Bengio, Samy},
+  booktitle={20th SIGNLL Conference on Computational Natural Language Learning, CoNLL 2016},
+  pages={10--21},
+  year={2016},
+  organization={Association for Computational Linguistics (ACL)}
+}
+
+ @inproceedings{Fu_Li_Liu_Gao_Celikyilmaz_Carin_2019, address={Minneapolis, Minnesota}, title={Cyclical Annealing Schedule: A Simple Approach to Mitigating}, url={http://aclweb.org/anthology/N19-1021}, DOI={10.18653/v1/N19-1021}, booktitle={Proceedings of the 2019 Conference of the North}, publisher={Association for Computational Linguistics}, author={Fu, Hao and Li, Chunyuan and Liu, Xiaodong and Gao, Jianfeng and Celikyilmaz, Asli and Carin, Lawrence}, year={2019}, pages={240–250}, language={en} }
+
+@inproceedings{NIPS2017_7a98af17,
+ author = {van den Oord, Aaron and Vinyals, Oriol and kavukcuoglu, koray},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Neural Discrete Representation Learning},
+ url = {https://proceedings.neurips.cc/paper/2017/file/7a98af17e63a0ac09ce2e96d03992fbc-Paper.pdf},
+ volume = {30},
+ year = {2017}
+}
