--- a/tex/neuro_concepts.tex
+++ b/tex/neuro_concepts.tex
@@ -5,6 +5,25 @@ It should be noted that this section presents only one possible interpretation f
 Concrete implementations of the concepts presented in this chapter can be found in \chref{vertical_self_org} and \chref{horizontal_self_org}.
 
 
+\section{The Discrepancy}\seclbl{neuro_concepts_discrepancy}
+Deep learning is inspired by the human brain and consequently many essential components of a deep learning model are named after their biological counterparts. But this linkage is deceptive: both systems work fundamentally differently and many concepts cannot be transferred directly.
+This experience is one of the author's most important but also most painful findings, as it was only made towards the end of the thesis (and after hundreds of failed attempts that are not written down in this document). This confusion of terminology between deep learning concepts and insights from neuroscience hinders and in some cases prevents the development and implementation of novel concepts\sidenote{a lesson that probably has to be learnt by anyone researching along the ridge of these two fields}. 
+
+In the biological context, neurons are often discussed as the main component of the nervous tissue and thus the nervous system.
+A neuron is a clearly defined cell consisting of components such as the cell body, dendrites, and an axon that communicates with other neurons via synapses.
+Consequently, in the neuroscience context, it is clearly defined what a neuron is. In fact, many of the theories in neuroscience are based on how neurons behave in various circumstances (see following chapters). 
+
+In the field of deep learning, this definition is much more vague. It could even be argued that neural networks contain (almost) no neurons. In fact, deep learning systems model and optimise weight parameters. Admittedly, multiplying a weight matrix $\boldsymbol{w}$ with input data $\boldsymbol{x}$ and adding a bias $\boldsymbol{b}$, i.e. $\boldsymbol{w} \cdot \boldsymbol{x} + \boldsymbol{b}$, can be interpreted as a kind of modelling of a neuron\sidenote{however, also in this case, weights and not neurons are modelled explicitly} (c.f. Section \secref{ann}). 
+Today, no modern network architecture is based purely on this folly-connected modelling pattern.
+Modern deep learning architectures for computer vision are usually based on CNNs (c.f. \secref{cnns}) or vision transformer \sidecite{Dosovitskiy_Beyer_Kolesnikov_Weissenborn_Zhai_Unterthiner_Dehghani_Minderer_Heigold_Gelly_2021}. The convolutional and pooling operations of CNNs cannot properly be modeled with neurons. The same applies to the attention mechanism of vision transformers. Furthermore, both architectures use various other concepts that have shown to improve results and/or computation efficiency such as skip-connection, normalization layers, etc.
+As a result, findings from neuroscience are often based on the investigation of neurons or neuron structures and consequently, the theories and findings derived from them cannot be transferred to deep learning settings in a simple way as an artificial neuron is something fundamentally different.
+
+Another fundamental difference is the interaction between the neurons. Biological neurons fire electrical impulses when they are sufficiently excited. The synaptic signals generated can be either excitatory or inhibitory. If the biological network is frozen in a certain state, it could be argued that the neurons are binary (excited or not excited). In reality, however, this process is much more complex: neurons communicate in temporal patterns of spikes.
+Artificial neurons, on the other hand (or, more precisely, the result of the matrix operation, often referred to as a neuron), can take on any floating point number as a ``state'' and thus represent an infinite number of states in the frozen condition. On the other hand, artificial neurons have no temporal dynamics. Thus, a large part of the intelligence of biological networks lies in the temporals pattern of the spikes, which are not taken into account by artificial networks (and cannot be modelled efficiently due to the clock-gated processing of modern compute infrastructure). These facts make it extremely difficult to link biological and artificial networks: If a frozen state of both networks is discussed, then a fundamental building block of biological neurons is missing, i.e. the temporal aspect. If, on the other hand, time dynamics are taken into account, then deep learning networks are not suitable and spiking networks have to be used.
+
+Although biological and artificial neuronal networks are fundamentally different in many aspects, there are also many similarities and biological findings can serve as a source of inspiration. However, this section should make clear that these sources of inspiration are to be interpreted rather abstractly and cannot be implemented in the same form as in the human brain. In fact, many failed experiments that are not documented in this thesis have failed because their implementation was too strongly oriented towards the biological concept. Therefore, in the following sections, various concepts are discussed and then an intuition is given by the author on how this can be interpreted in a deep learning setting without time dynamics but with complex neuron states.
+
+
 \section{Self-Organisation}\seclbl{neuro_concepts_self_org}
 It is known that large parts of the human brain are self-organizing \sidecite{kelso1995dynamic}.
 Self-organization is the process by which systems consisting of many units acquire their function through local interaction and without interference from a external supervisory system.
